--- a/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
+++ b/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
@@ -16,41 +16,41 @@
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
           <mat-label>Nombre</mat-label>
-          <input type="text" matInput formControlName="nombre" maxlength="2000">
+          <input type="text" matInput formControlName="nombre" maxlength="500">
           <mat-error *ngIf="this.nombre.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
         <mat-form-field class="flex-auto">
           <mat-label>Direccion</mat-label>
-          <input type="text" matInput formControlName="direccion">
+          <input type="text" matInput formControlName="direccion" maxlength="500">
           <mat-error *ngIf="this.direccion.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
       </div>
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
           <mat-label>Razón social</mat-label>
-          <input type="text" matInput formControlName="razonSocial" maxlength="2000">
+          <input type="text" matInput formControlName="razonSocial" maxlength="500">
           <mat-error *ngIf="this.razonSocial.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
         <mat-form-field class="flex-auto">
           <mat-label>RFC</mat-label>
-          <input type="text" matInput formControlName="rfc">
+          <input type="text" matInput formControlName="rfc" maxlength="13">
           <mat-error *ngIf="this.rfc.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
         <mat-form-field class="flex-auto">
           <mat-label>Sigla</mat-label>
-          <input type="text" matInput formControlName="sigla" maxlength="2000">
+          <input type="text" matInput formControlName="sigla" maxlength="50">
           <mat-error *ngIf="this.sigla.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
       </div>
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
           <mat-label>Longitud</mat-label>
-          <input type="text" matInput formControlName="longitud" maxlength="2000">
+          <input type="text" matInput formControlName="longitud" maxlength="500">
           <mat-error *ngIf="this.longitud.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
         <mat-form-field class="flex-auto">
           <mat-label>Latitud</mat-label>
-          <input type="text" matInput formControlName="latitud" (blur)="cargarMapa()">
+          <input type="text" matInput formControlName="latitud" (blur)="cargarMapa()" maxlength="500">
           <mat-error *ngIf="this.latitud.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
       </div>
