--- a/src/app/components/lista-propietarios/lista-propietarios.component.html
+++ b/src/app/components/lista-propietarios/lista-propietarios.component.html
@@ -24,7 +24,7 @@
 
           <button
             (click)="openModal(null)"
-            matTooltip="Agregar Propietario"
+            matTooltip="Agregar"
             class="bg-gray-400 hover:bg-gray-500 text-gray-800 font-bold py-2 px-2 rounded inline-flex items-center shadow-md"
           >
             <svg
