--- a/src/app/components/lista-proveedor/lista-proveedor.component.html
+++ b/src/app/components/lista-proveedor/lista-proveedor.component.html
@@ -24,7 +24,7 @@
 
           <button
             (click)="openModal(null)"
-            matTooltip="Agregar Propietario"
+            matTooltip="Agregar"
             class="bg-gray-400 hover:bg-gray-500 text-gray-800 font-bold py-2 px-2 rounded inline-flex items-center shadow-md"
           >
             <svg
@@ -259,7 +259,7 @@
               <div class="flex justify-center">
                 <a
                   (click)="openModal(row)"
-                  matTooltip="Editar propietario"
+                  matTooltip="Editar"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button
                 >
@@ -275,7 +275,7 @@
                 </a> -->
                 <a
                   (click)="EliminarPropietario(row)"
-                  matTooltip="Eliminar propietario"
+                  matTooltip="Eliminar"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button
                 >
