--- a/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
+++ b/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
@@ -115,13 +115,16 @@
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Nombre: {{ item.nombre }}</div>
+              <div class="flex justify-center items-center mb-1 mt-1">
+                <div class="text-center">
+                  <span class="font-bold">Nombre</span>: {{ item.nombre }}
+                </div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Estatico: {{ item.estatico }}</div>
+              <div class="flex justify-center items-center mb-1 mt-1">
+                <div class="text-center">
+                  <span class="font-bold">Estatico</span>: {{ item.estatico }}
+                </div>
               </div>
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center">
