--- a/src/app/components/lista-cliente/lista-cliente.component.html
+++ b/src/app/components/lista-cliente/lista-cliente.component.html
@@ -115,25 +115,29 @@
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Nombre: {{ item.nombre }}</div>
+              <div class="flex justify-center items-center mb-1 mt-1">
+                <div class="text-center">
+                  <span class="font-bold">Nombre</span>: {{ item.nombre }}
+                </div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Razon Social: {{ item.razonsocial }}</div>
+              <div class="flex justify-center items-center mb-1 mt-1">
+                <div class="text-center">
+                  <span class="font-bold">Razón social</span>: {{ item.razonsocial }}
+                </div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Direccion: {{ item.direccion }}</div>
+              <div class="flex justify-center items-center mb-1 mt-1">
+                <div class="text-center">
+                  <span class="font-bold">Direccion</span>: {{ item.direccion }}</div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-between items-center mb-10">
+              <div class="flex justify-between items-center mb-1 mt-1">
                 <div>
-                  Sigla: {{ item.sigla }}
+                  <span class="font-bold">Sigla</span>: {{ item.sigla }}
                 </div>
                 <div>
-                  RFC: {{ item.rfc }}
+                  <span class="font-bold">RFC</span>: {{ item.rfc }}
                 </div>
               </div>
               <!-- <mat-divider></mat-divider>
