--- a/src/app/components/lista-inventario/lista-inventario.component.html
+++ b/src/app/components/lista-inventario/lista-inventario.component.html
@@ -112,31 +112,30 @@
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-5">
+              <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Modelo:</b> {{ item.modelo }}</div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-5">
+              <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Fabricante:</b> {{ item.fabricante }}</div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-5">
+              <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Categoría:</b> {{ item.categoria }}</div>
               </div>
-              <div class="flex justify-center items-center mb-5">
+              <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Nuevo:</b> {{ item.nuevo ? 'Si':'No' }}</div>
               </div>
-<!--               <div class="flex justify-center items-center mb-5">
+<!--               <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Año:</b> {{ item.anio }}</div>
               </div>
-              <div class="flex justify-center items-center mb-5">
+              <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Estatus:</b> {{ item.catEstatusinventario }}</div>
               </div> -->
-              <div class="flex justify-center items-center mb-5">
+              <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Número serie:</b> {{ item.numerodeserie }}</div>
               </div>
-              <div class="flex justify-center items-center mb-5">
+              <div class="flex justify-center items-center mb-1 mt-1">
                 <div class="text-center"><b>Clave:</b> {{ item.inventarioclv }}</div>
               </div>
 
