--- a/src/app/components/lista-proveedor/lista-proveedor.component.html
+++ b/src/app/components/lista-proveedor/lista-proveedor.component.html
@@ -107,35 +107,40 @@
             No se encontraron registros
           </h1>
           </div>
+
+          <!-- Card section: -->
           <div
             *ngIf="this.listaItems.length != 0"
-            class="card overflow-auto grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-2 flex-wrap px-1"
+            class="card overflow-auto grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 gap-2 flex-wrap px-2"
           >
             <div
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Razon Social: {{ item.razonsocial }}</div>
-              </div>
-              <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Correo: {{ item.correo }}</div>
-              </div>
-              <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">RFC: {{ item.rfc }}</div>
-              </div>
-              <mat-divider></mat-divider>
-              <!-- <div class="flex justify-between items-center mb-10">
-                <div>
-                  Cuenta:
+              <div class="flex justify-center">
+                <div class="grid justify-items-start mb-1 mt-1">
+                  <div class="text-left">
+                    <span class="font-bold">Razon Social</span>: {{ item.razonsocial }}
+                  </div>
                 </div>
-                <div>
-                  Rol:
+              </div>
+              <mat-divider></mat-divider>
+              <div class="flex justify-center">
+                <div class="grid justify-items-start mb-1 mt-1">
+                  <div class="text-left">
+                    <span class="font-bold">Correo</span>: {{ item.correo }}
+                  </div>
                 </div>
-              </div> -->
+              </div>
+              <mat-divider></mat-divider>
+              <div class="flex justify-center">
+                <div class="grid justify-items-start mb-1 mt-1">
+                  <div class="text-left">
+                    <span class="font-bold">RFC</span>: {{ item.rfc }}
+                  </div>
+                </div>
+              </div>
+              <mat-divider></mat-divider>
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center">
                 <div class="mr-5">
@@ -175,20 +180,6 @@
                     </svg>
                   </button>
                 </div>
-                <!-- <div class="mr-5">
-                  <button
-                    matTooltip="Descargar documentación"
-                    class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-2 rounded inline-flex items-center shadow-md"
-                  >
-                    <svg
-                      class="fill-current w-5 h-5"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 20 20"
-                    >
-                      <path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z" />
-                    </svg>
-                  </button>
-                </div> -->
                 <div class="mt-3.5 flex flex-col justify-center">
                   <div class="flex justify-center">
                     <mat-slide-toggle
