--- a/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
+++ b/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
@@ -136,6 +136,28 @@
                 for="file_input"
                 >Factura PDF</label
               >
+              <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" 
+    (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+        <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
+          Arraste archivo
+          <button style="margin-left: 1rem;" type="button" (click)="openFileSelector()">Browse Files</button>
+        </ng-template>
+    </ngx-file-drop>
+    <a
+                *ngIf="adquisicionModel.facpdf!=''"
+                (click)="abrirDocumento(adquisicionModel.facpdf)"
+                href="javascript: void(0)"
+                class="underline underline-offset-1 mt-2 flex justify-center text-sm text-blue-500"
+                id="file_input_help"
+                >Descargar factura PDF.</a
+              >
+            </div>
+            <!-- <div class="lg:w-1/2 md:w-1/2 w-full" >
+              <label
+                class="block mb-2 text-sm font-medium text-gray-900"
+                for="file_input"
+                >Factura PDF</label
+              >
               <input
                 class="block w-full text-sm text-gray-900 border border-gray-300 rounded-md cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
                 aria-describedby="file_input_help"
@@ -151,20 +173,27 @@
                 id="file_input_help"
                 >Descargar factura PDF.</a
               >
-            </div>
+            </div> -->
             <div class="lg:w-1/2 md:w-1/2 w-full">
               <label
                 class="block mb-2 text-sm font-medium text-gray-900"
                 for="file_input2"
                 >Factura XML</label
               >
-              <input
+              <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" 
+    (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
+        <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
+          Arraste archivo
+          <button style="margin-left: 1rem;" type="button" (click)="openFileSelector()">Browse Files</button>
+        </ng-template>
+    </ngx-file-drop>
+              <!-- <input
                 class="block w-full text-sm text-gray-900 border border-gray-300 rounded-md cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
                 aria-describedby="file_input_help"
                 id="file_input2"
                 (change)="xmlSeleccionado($event)"
                 type="file"
-              />
+              /> -->
               <a
               *ngIf="adquisicionModel.facxml!=''"
               (click)="abrirDocumento(adquisicionModel.facxml)"
