--- a/src/app/components/lista-proveedor/modal-proveedor/modal-proveedor.component.html
+++ b/src/app/components/lista-proveedor/modal-proveedor/modal-proveedor.component.html
@@ -119,7 +119,7 @@
     </form>
     <div class="flex justify-center">
       <div *ngIf="this.listaSubs.length == 0">
-        <h1 class="title text-3xl text-gray-400">Usuario sin subordinados</h1>
+        <!-- <h1 class="title text-3xl text-gray-400">Usuario sin subordinados</h1> -->
       </div>
       <!--  <table
         *ngIf="this.listaSubs.length != 0"
