--- a/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
+++ b/src/app/components/lista-adquisiciones/modal-adquisicion/modal-adquisicion.component.html
@@ -136,7 +136,7 @@
                 for="file_input"
                 >Factura PDF</label
               >
-              <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" 
+              <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)"
     (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
         <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
           Arraste archivo
@@ -180,7 +180,7 @@
                 for="file_input2"
                 >Factura XML</label
               >
-              <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" 
+              <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)"
     (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
         <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
           Arraste archivo
@@ -299,6 +299,7 @@
         <table class="w-full flex flex-row flex-no-wrap sm:bg-white rounded-lg  sm:shadow-lg my-5">
           <thead class="text-white">
             <tr class="bg-gray-200 text-gray-600 flex flex-col flex-no wrap md:table-row rounded-l-lg sm:rounded-none mb-1"  *ngFor="let row of listaProductosAdquisicion">
+              <th class="p-3 text-left">Categoria</th>
               <th class="p-3 text-left">Producto</th>
               <th class="p-3 text-left">Cantidad</th>
               <th class="p-3 text-left">Costo</th>
@@ -307,6 +308,7 @@
           </thead>
           <tbody class="flex-1 md:flex-none">
             <tr class="flex flex-col flex-no wrap md:table-row mb-1" *ngFor="let row of listaProductosAdquisicion">
+              <td class="border-grey-light border hover:bg-gray-100 p-3  truncate">  {{ row.categoria }}</td>
               <td class="border-grey-light border hover:bg-gray-100 p-3  truncate">  {{ row.modelo }}</td>
               <td class="border-grey-light border hover:bg-gray-100 p-3 truncate">{{ row.cantidad }}</td>
               <td class="border-grey-light border hover:bg-gray-100 p-3 truncate">{{ row.costosiunitario }}</td>
