--- a/src/app/components/lista-adquisiciones/modal-producto-adquisicion/modal-producto-adquisicion.component.html
+++ b/src/app/components/lista-adquisiciones/modal-producto-adquisicion/modal-producto-adquisicion.component.html
@@ -9,6 +9,9 @@
   </div>
   <mat-divider class="-mx-6 text-border"></mat-divider>
   <mat-dialog-content class="px-1 ">
+    <div *ngIf="this.categoriaSelect != ''" class="flex justify-center">
+      <h1 class="title text-gray-600">El producto seleccionado pertenece a la categoria de {{this.categoriaSelect}}</h1>
+    </div>
     <div class="mt-4 flex flex-col gap-2  m-2">
       <div  class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
