--- a/src/@vex/layout/sidenav/sidenav.component.html
+++ b/src/@vex/layout/sidenav/sidenav.component.html
@@ -4,35 +4,11 @@
      [class.open]="collapsed && collapsedOpen$ | async"
      class="sidenav flex flex-col">
   <div class="vex-sidenav-toolbar__container">
-    <div *ngIf="!collapsed" class="sidenav-toolbar flex-none flex items-center m-3">
-      <img style="width: 85%; height: auto;" [src]="imageUrl$ | async" alt="Logo" class="select-none"/>
-      <button (click)="toggleCollapse()"
-              *ngIf="showCollapsePin$ | async"
-              class="w-8 h-8 -mr-2 leading-none flex-none hidden lg:block"
-              mat-icon-button
-              type="button">
-        <mat-icon *ngIf="!collapsed"
-                  class="text-[0.875rem] w-[0.875rem] h-[0.875rem]"
-                  svgIcon="mat:radio_button_checked"></mat-icon>
-        <mat-icon *ngIf="collapsed"
-                  class="text-[0.875rem] w-[0.875rem] h-[0.875rem]"
-                  svgIcon="mat:radio_button_unchecked"></mat-icon>
-      </button>
+    <div (click)="toggleCollapse()" *ngIf="!collapsed" class="sidenav-toolbar flex-none flex items-center m-3">
+      <img style="width: 90%; height: auto;" [src]="'https://grupopm.com.mx/wp-content/uploads/2018/09/grupo-pm-logo.png'" alt="Logo" class="select-none"/>
     </div>
-    <div *ngIf="collapsed" class="sidenav-toolbar flex-none flex items-center">
+    <div (click)="toggleCollapse()" *ngIf="collapsed" class="sidenav-toolbar flex-none flex items-center">
     <img style="width: 25px; height: 25px;" [src]="'../../../assets/img/grupopm_ch.png'" alt="Logo" class="select-none"/>
-      <button (click)="toggleCollapse()"
-              *ngIf="showCollapsePin$ | async"
-              class="w-8 h-8 -mr-2 leading-none flex-none hidden lg:block"
-              mat-icon-button
-              type="button">
-        <mat-icon *ngIf="!collapsed"
-                  class="text-[0.875rem] w-[0.875rem] h-[0.875rem]"
-                  svgIcon="mat:radio_button_checked"></mat-icon>
-        <mat-icon *ngIf="collapsed"
-                  class="text-[0.875rem] w-[0.875rem] h-[0.875rem]"
-                  svgIcon="mat:radio_button_unchecked"></mat-icon>
-      </button>
     </div>
 
 <!--     <div *ngIf="searchVisible$ | async" class="vex-sidenav-search__container">
