--- a/src/app/components/lista-inventario/lista-inventario.component.html
+++ b/src/app/components/lista-inventario/lista-inventario.component.html
@@ -4,8 +4,9 @@
   <vex-page-layout-header class="flex flex-col items-start justify-center">
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
-        <h1 class="title mt-0 mb-1">Inventarios</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Inventarios']"></vex-breadcrumbs>
+        <h1 *ngIf="this.productosAsignar == true " class="title mt-0 mb-1">Productos sin asignar</h1>
+        <h1 *ngIf="this.productosAsignar == false" class="title mt-0 mb-1">Productos asignados</h1>
+        <vex-breadcrumbs [crumbs]="['Productos']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
