--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,8 +15,8 @@
       <div class="flex flex-col">
         <mat-form-field class="flex-1">
           <mat-label>Usuario</mat-label>
-          <input formControlName="user" matInput required>
-          <mat-error *ngIf="form.get('user').hasError('required')">El usuario es requerido</mat-error>
+          <input formControlName="usuario" matInput required>
+          <mat-error *ngIf="form.get('usuario').hasError('required')">El usuario es requerido</mat-error>
         </mat-form-field>
         <mat-form-field class="flex-1">
           <mat-label>Contraseña</mat-label>
