--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -15,17 +15,15 @@
       <div class="flex flex-col">
         <mat-form-field class="flex-1">
           <mat-label>Usuario</mat-label>
-          <input formControlName="user" matInput required>
-          <mat-error *ngIf="form.get('user').hasError('required')">El usuario es requerido</mat-error>
-          <mat-error *ngIf="form.get('user').hasError('email')">Ingrese un correo válido</mat-error>
+          <input formControlName="email" matInput required class="bg-slate-100" placeholder="Ingrese su correo">
+          <mat-error *ngIf="form.get('email').hasError('required')">El usuario es requerido</mat-error>
+          <mat-error *ngIf="form.get('email').hasError('email')">Ingrese un correo válido</mat-error>
         </mat-form-field>
       </div>
 
-      <button [disabled]="form.invalid" (click)="login()" color="primary" mat-raised-button type="button">
+      <button [disabled]="form.invalid" (click)="resetPassword()" color="primary" mat-raised-button type="button">
         Recuperar contraseña
       </button>
-
-
     </div>
   </div>
 </div>
