--- a/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
+++ b/src/app/components/lista-categoria-producto/lista-categoria-producto.component.html
@@ -115,7 +115,14 @@
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <div class="flex justify-center items-center mb-1 mt-1">
+              <div class="flex flex-col mb-1 mt-1">
+                <div class="flex justify-end mb-3">
+                  <span
+                    class="bg-blue-100 text-green-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-green-900 dark:text-green-300"
+                  >
+                    Categoria Producto
+                  </span>
+                </div>   
                 <div class="text-center">
                   <span class="font-bold">Nombre</span>: {{ item.nombre }}
                 </div>
