--- a/src/app/components/lista-inventario/lista-inventario.component.html
+++ b/src/app/components/lista-inventario/lista-inventario.component.html
@@ -113,7 +113,21 @@
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <div class="flex justify-center items-center mb-1 mt-1">
+            <div class="flex flex-col mb-1 mt-1">
+              <div *ngIf="this.productosAsignar == true" class="flex justify-end mb-3">
+                <span
+                  class="bg-blue-100 text-blue-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+                >
+                  Productos registrados
+                </span>
+              </div>
+              <div *ngIf="this.productosAsignar == false" class="flex justify-end mb-3">
+                <span
+                  class="bg-blue-100 text-blue-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"
+                >
+                  Productos sin registar
+                </span>
+              </div>
                 <div class="text-center"><b>Modelo:</b> {{ item.modelo }}</div>
               </div>
               <mat-divider></mat-divider>
