--- a/src/app/components/lista-propietarios/lista-propietarios.component.html
+++ b/src/app/components/lista-propietarios/lista-propietarios.component.html
@@ -115,7 +115,14 @@
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <div class="flex justify-center items-center mb-1 mt-1">
+              <div class="flex flex-col mb-1 mt-1">
+                <div class="flex justify-end mb-3">
+                  <span
+                    class="bg-blue-100 text-orange-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-orange-900 dark:text-orange-300"
+                  >
+                    Propietarios
+                  </span>
+                </div>
                 <div class="text-center">
                   <span class="font-bold">Razon Social</span>: {{ item.razonsocial }}
                 </div>
