--- a/src/app/components/lista-proveedor/lista-proveedor.component.html
+++ b/src/app/components/lista-proveedor/lista-proveedor.component.html
@@ -117,7 +117,14 @@
               *ngFor="let item of listaItems"
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
-              <div class="flex justify-center">
+              <div class="flex flex-col justify-center">
+                <div class="flex justify-end mb-3">
+                  <span
+                    class="bg-blue-100 text-red-800 text-xs font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-red-900 dark:text-red-300"
+                  >
+                    Proveedor
+                  </span>
+                </div>
                 <div class="grid justify-items-start mb-1 mt-1">
                   <div class="text-left">
                     <span class="font-bold">Razon Social</span>: {{ item.razonsocial }}
