--- a/src/@vex/layout/sidenav/sidenav-item/sidenav-item.component.html
+++ b/src/@vex/layout/sidenav/sidenav-item/sidenav-item.component.html
@@ -7,6 +7,16 @@
    matRippleColor="var(--sidenav-item-ripple-color)"
    routerLinkActive="vex-sidenav-item--active">
   <mat-icon *ngIf="level === 0" [svgIcon]="item.icon" class="vex-sidenav-item__icon">{{item.icon}}</mat-icon>
+
+  <mat-icon *ngIf="item.label === 'Categoría producto'" class="mr-1">workspaces</mat-icon>
+  <mat-icon *ngIf="item.label === 'Clientes'" class="mr-1">face</mat-icon>
+  <mat-icon *ngIf="item.label === 'Fabricante'" class="mr-1">branding_watermark</mat-icon>
+  <mat-icon *ngIf="item.label === 'Propietarios'" class="mr-1">view_agenda</mat-icon>
+  <mat-icon *ngIf="item.label === 'Proveedor'" class="mr-1">sell</mat-icon>
+  <mat-icon *ngIf="item.label === 'Productos'" class="mr-1">screen_search_desktop</mat-icon>
+  <mat-icon *ngIf="item.label === 'Productos registrados'" class="mr-1">mobile_friendly</mat-icon>
+  <mat-icon *ngIf="item.label === 'Productos sin registrar'" class="mr-1">phonelink_erase</mat-icon>
+
   <span class="vex-sidenav-item__label">{{ item.label }}</span>
   <span *ngIf="item.badge"
         [ngClass]="[item.badge.bgClass, item.badge.textClass]"
@@ -20,6 +30,7 @@
      matRippleColor="var(--sidenav-item-ripple-color)"
      routerLinkActive="vex-sidenav-item--active">
   <mat-icon *ngIf="level === 0" [svgIcon]="item.icon" class="vex-sidenav-item__icon">{{item.icon}}</mat-icon>
+
   <span class="vex-sidenav-item__label">{{ item.label }}</span>
   <span *ngIf="item.badge"
         [ngClass]="[item.badge.bgClass, item.badge.textClass]"
@@ -27,17 +38,30 @@
 </div>
 
 <ng-container *ngIf="isDropdown(item)">
-  <div (click)="toggleOpen()"
-       [class.vex-sidenav-item--active]="isOpen || isActive"
-       [class.vex-sidenav-item--open]="isOpen"
-       class="vex-sidenav-item"
-       matRipple
-       matRippleColor="var(--sidenav-item-ripple-color)">
-    <mat-icon *ngIf="level === 0" [svgIcon]="item.icon" class="vex-sidenav-item__icon">{{item.icon}}</mat-icon>
-    <span class="vex-sidenav-item__label">{{ item.label }}</span>
-    <span *ngIf="item.badge"
-          [ngClass]="[item.badge.bgClass, item.badge.textClass]"
-          class="vex-sidenav-item__badge">{{ item.badge.value }}</span>
+  <div 
+    (click)="toggleOpen()"
+    [class.vex-sidenav-item--active]="isOpen || isActive"
+    [class.vex-sidenav-item--open]="isOpen"
+    class="vex-sidenav-item"
+    matRipple
+    matRippleColor="var(--sidenav-item-ripple-color)"
+  >
+    <mat-icon 
+      *ngIf="level === 0" 
+      [svgIcon]="item.icon" 
+      class="vex-sidenav-item__icon"
+    >
+      {{item.icon}}
+    </mat-icon>
+    <span class="vex-sidenav-item__label">
+      {{ item.label }}
+    </span>
+    <span 
+      *ngIf="item.badge"
+      [ngClass]="[item.badge.bgClass, item.badge.textClass]"
+      class="vex-sidenav-item__badge"
+    >
+      {{ item.badge.value }}</span>
     <mat-icon class="vex-sidenav-item__dropdown-icon" svgIcon="mat:keyboard_arrow_right">{{item.icon}}</mat-icon>
   </div>
   <div [@dropdown]="isOpen" class="vex-sidenav-item__dropdown">
