se agrego la funcionalidad de cargar imagenes a productos asignados

--- a/src/app/components/lista-inventario/lista-inventario.component.html
+++ b/src/app/components/lista-inventario/lista-inventario.component.html
@@ -194,7 +194,7 @@
                     </svg>
                   </button>
                 </div>
-                <div *ngIf="productosAsignar==false" class="mr-5">
+                <div *ngIf="loadImages" class="mr-5">
                   <button
                   (click)="openModalLoadImage(item)"
                   matTooltip="Cargar imagenes"
