--- a/src/app/components/lista-inventario/modal-load-image/modal-load-image.component.scss
+++ b/src/app/components/lista-inventario/modal-load-image/modal-load-image.component.scss
@@ -3,3 +3,10 @@
         display:none;
     }
 }
+.navegador{
+    position: sticky;
+right: 0px;
+top: 23px;
+padding-top: 15px;
+margin-bottom: 0;
+}
